--- a/register_printer_gui/mainwindow.ui
+++ b/register_printer_gui/mainwindow.ui
@@ -91,28 +91,28 @@
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_3">
              <item>
-              <widget class="QCheckBox" name="checkBox_4">
+              <widget class="QCheckBox" name="gen_doc_checkbox">
                <property name="text">
                 <string>Generate register documents.</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkBox_3">
+              <widget class="QCheckBox" name="gen_c_header_checkbox">
                <property name="text">
                 <string>Generate register C header files.</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkBox_2">
+              <widget class="QCheckBox" name="gen_uvm_checkbox">
                <property name="text">
                 <string>Generate register UVM models.</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkBox">
+              <widget class="QCheckBox" name="gen_rtl_checkbox">
                <property name="text">
                 <string>Generate register RTL modudles.</string>
                </property>
