--- a/register_printer_gui/mainwindow.ui
+++ b/register_printer_gui/mainwindow.ui
@@ -95,12 +95,18 @@
                <property name="text">
                 <string>Generate register documents.</string>
                </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
               </widget>
              </item>
              <item>
               <widget class="QCheckBox" name="gen_c_header_checkbox">
                <property name="text">
                 <string>Generate register C header files.</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
@@ -109,12 +115,18 @@
                <property name="text">
                 <string>Generate register UVM models.</string>
                </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
               </widget>
              </item>
              <item>
               <widget class="QCheckBox" name="gen_rtl_checkbox">
                <property name="text">
                 <string>Generate register RTL modudles.</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
